# DPS

./: .gitignore  README.md
VL 29.04.19/: .gitignore  main.tex
Ü1/: .gitignore  A3  A3.hi  A3.hs  Serie1.cabal  Simple.hi  Simple.hs
