name:                 Serie1
version:              0.1.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:               BB20101997
maintainer:           bennet-blessmann@t-online.de
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable Serie1
  main-is:              A3.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
  hs-source-dirs:       src
  default-language:     Haskell2010
